--- a/assets/css/component/menu.css
+++ b/assets/css/component/menu.css
@@ -13,7 +13,7 @@ ul.inline,
 ul.inline li,
 nav > ul,
 nav > ul > li {
-    display: inline-block;
+    display: inline;
     padding: 0;
 }
 
